# MyLanguageInterpreter

./: README.md  dokumentacja koncowa.odt  projekt wstępny.odt
code/: CMakeLists.txt  Error.cpp  Error.h  ErrorType.h  Lexer.h  LexerWithoutComments.cpp  LexerWithoutComments.h  MyLangLexer.cpp  MyLangLexer.h  Position.cpp  Position.h  Token.cpp  Token.h  TokenType.h  Visitor.h  main.cpp  print_utils.cpp  print_utils.h
code/interpreter/: AdditiveVisitor.cpp  AdditiveVisitor.h  Aliases.h  BooleanVisitor.cpp  BooleanVisitor.h  CastVisitor.cpp  CastVisitor.h  Context.cpp  Context.h  Exceptions.h  IncompletePairVisitor.cpp  IncompletePairVisitor.h  Interpreter.h  MultiplicativeVisitor.cpp  MultiplicativeVisitor.h  MyLangInterpreter.cpp  MyLangInterpreter.h  PairVisitor.cpp  PairVisitor.h  PassFunctionArgumentVisitor.cpp  PassFunctionArgumentVisitor.h  RelativeVisitor.cpp  RelativeVisitor.h  Scope.cpp  Scope.h  Value.cpp  Value.h  Variable.cpp  Variable.h  VariableType.h
code/lexer/: Lexer.h  LexerWithoutComments.cpp  LexerWithoutComments.h  MyLangLexer.cpp  MyLangLexer.h
code/parser/: MyLangParser.cpp  MyLangParser.h  Parser.h  PrintVisitor.cpp  PrintVisitor.h  Visitable.h  Visitor.h
code/parser/structure/: AdditiveExpression.cpp  AdditiveExpression.h  AndExpression.cpp  AndExpression.h  Argument.cpp  Argument.h  Assign.cpp  Assign.h  Block.cpp  Block.h  CastExpression.cpp  CastExpression.h  Constant.cpp  Constant.h  Declaration.h  Expression.cpp  Expression.h  Factor.h  Field.cpp  Field.h  FieldType.h  FunctionCall.cpp  FunctionCall.h  FunctionDeclaration.cpp  FunctionDeclaration.h  Identifier.cpp  Identifier.h  IfStatement.cpp  IfStatement.h  Instruction.h  LoopStatement.cpp  LoopStatement.h  MatchExpression.cpp  MatchExpression.h  MatchNone.cpp  MatchNone.h  MatchPair.cpp  MatchPair.h  MatchStatement.cpp  MatchStatement.h  (+25 more)
code/structure/: AdditiveExpression.h  AdditiveType.h  AndExpression.cpp  Argument.cpp  Argument.h  Assign.cpp  Assign.h  CastExpression.h  ConstantType.h  Declaration.h  Expression.h  Factor.h  Field.cpp  Field.h  FunctionCall.cpp  FunctionCall.h  FunctionDeclaration.cpp  FunctionDeclaration.h  Identifier.cpp  Identifier.h  IfStatement.cpp  IfStatement.h  Instruction.h  LoopStatement.cpp  MatchExpression.h  MatchNone.cpp  MatchNone.h  MatchPair.cpp  MatchStatement.cpp  MatchStatement.h  MatchType.cpp  MatchType.h  MultiplicationExpression.cpp  MultiplicationExpression.h  MultiplicativeType.h  NegatedExpression.cpp  NegatedExpression.h  NegationType.h  OrExpression.h  Pair.cpp  (+14 more)
code/tests/: CMakeLists.txt  CommentsTest.cpp  IdentifiersAndKeywordsTest.cpp  NewLineTest.cpp  NumericTokenTest.cpp  SimpleTokensTest.cpp  StringTest.cpp  TestsMain.cpp
code/tests/integration/: FibonacciTest.cpp  FunctionCallTest.cpp  IfTest.cpp  LogicalTest.cpp  LoopTest.cpp  PairTest.cpp  PatternMatchTest.cpp  VariableAssignTest.cpp
code/tests/interpreter/: ArithmeticTest.cpp  AssignTest.cpp  BooleanTest.cpp  CastTest.cpp  FunctionCallTest.cpp  FunctionDeclarationTest.cpp  IfTest.cpp  LoopTest.cpp  PatternTest.cpp  ProgramTest.cpp  RelativeExpressionTest.cpp  VariableDeclarationTest.cpp
code/tests/lexer/: CommentsTest.cpp  GeneralTests.cpp  IdentifiersAndKeywordsTest.cpp  NewLineTest.cpp  NumericTokenTest.cpp  SimpleTokensTest.cpp  StringTest.cpp
code/tests/parser/: AssignTest.cpp  ExpressionTest.cpp  FunctionCallTest.cpp  FunctionDeclarationTest.cpp  IfTest.cpp  IntegrationWithLexerTest.cpp  LoopTest.cpp  PairTest.cpp  ParseBlockTest.cpp  ParseProgramTest.cpp  ParserTest.cpp  PatternTest.cpp  RelativeExpressionTest.cpp
code/tests/parser/LexerMock/: LexerMock.cpp  LexerMock.h
przykłady testowe/: describe.tko  fib.tko  not_closed_string.tko  source.tko
